MODROLESKC-338: Disallow transitioning role type to/from DEFAULT (#296)